--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ django-unfold = "^0.20.3"
 pillow = "^10.2.0"
 django-tinymce = "^3.7.1"
 psycopg2 = "^2.9.9"
+mysqlclient = "^2.2.4"
 
 
 [build-system]
